[project]
name = "pneumo-vision"
version = "0.1.0"
description = "Ensemble Pneumonia Detection from Chest X-Rays (Keras / TensorFlow)"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "streamlit>=1.32.0",
    "tensorflow>=2.15.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
]
